--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/btnShowMenuDialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="show menu dialog" />
+
+        <com.scorpio.ui.widget.CountDownButton
+            android:id="@+id/btnCountDown"
+            android:layout_marginTop="@dimen/dp10"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/shape_rect_round_corner_orange_10dp"
+            app:startText="获取验证码"
+            app:endText="重新获取"
+            app:startNum="60"
+            app:unit="秒"
+            app:endNum="0"
+            android:gravity="center"
+            android:layout_width="@dimen/dp80"
+            android:layout_height="@dimen/dp30" />
+
+        <com.scorpio.ui.widget.CountView
+            app:count_textColor="@color/color_4d4d4d"
+            app:direction="vertical_bottom_increation"
+            android:layout_width="@dimen/dp40"
+            android:layout_height="@dimen/dp80"/>
+
+    </LinearLayout>
+</ScrollView>
