--- a/app/src/main/res/layout/activity_refresh_and_load_more.xml
+++ b/app/src/main/res/layout/activity_refresh_and_load_more.xml
@@ -9,7 +9,7 @@
     app:bottomLayout="@layout/footer_layout"
     app:headerLayout="@layout/refresh_header">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/mRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
